package edu.fiuba.algo3.modelo.Carta;

import edu.fiuba.algo3.modelo.Tablero;

public abstract class Carta {

    public abstract void usar(Tablero tablero);

}
