package edu.fiuba.algo3.modelo.Carta.Especial;

import edu.fiuba.algo3.modelo.Carta.Carta;
import edu.fiuba.algo3.modelo.Tablero;

public class Especial extends Carta {
    @Override
    public void usar(Tablero tablero) {

    }
}
