package edu.fiuba.algo3.modelo.Fases;

public abstract class Fase {
}
