package edu.fiuba.algo3.modelo.Fases;

public class Preparacion extends Fase {
}
