package edu.fiuba.algo3.modelo;

public class Modificador {
    public Puntaje aplicarModificador(Puntaje puntaje) {
        return puntaje;
    }
}
