package edu.fiuba.algo3.modelo;

public class Ronda {

    public void jugarRonda() {
    }
}
