@startuml

Ronda o- "2"Jugador
Gwent o- "2" Jugador
Gwent -> "3" Ronda
Gwent -> Tablero
Gwent -> Fase
Fase <|-- Inicial
Fase <|-- Preparacion
Fase <|-- Juego
Fase <|-- Final
Juego --> Ronda
Inicial --> Jugador
Preparacion -> Mazo
Preparacion -> Moneda
Ronda --> Turno
Jugador -> Mazo
Jugador -> Turno
Jugador -> Tablero
Jugador -> Mano
Mano ..> Mazo
Mano --> "*" Carta

Mazo o- Carta
'Mazo o-> "*" Unidad
'Mazo o-> "*" Especial

Carta <|-- Unidad
Carta <|-- Especial

Tablero -> "3" Seccion
Seccion -> "*" Unidad
Unidad --> Puntaje
Unidad --> Modificador
Especial <|-- TierraArrasada
Especial <|-- MoraleBoost
Especial <|-- Clima

Colocador <|-- ColocadorCuerpoACuerpo
Colocador <|-- ColocadorRango
Colocador <|-- ColocadorAsedio

Unidad --> Colocador

Clima -> "2"Seccion
'Clima -> ModificadorClima

Jugador -> PilaDeDescarte
PilaDeDescarte --> "*" Carta

abstract class Fase
class Inicial
class Preparacion
class Juego

class Ronda {
+calcularGanador() : Jugador
}
abstract class Carta {
+usar(tablero: Tablero)
}
class Jugador {
+Jugador(tablero : Tablero, mazo : Mazo)
+validarCartasSuficientesMazo(cantidadUnidades : int, cantidadEspeciales : int)
+validarCartasSuficientesMano(cantidadCartas : int)
+tomarCartasMazo(cantidadCartas : int)
+seleccionarCarta(posicion : int) : Carta
+usarCarta(posicion : int)
+obtenerPuntaje() : Puntaje
}
class Tablero {
+Tablero(seccionCuerpoACuerpo : Seccion, seccionRango : Seccion, seccionAsedio : Seccion)
+ubicarCuerpoACuerpo(unidad : Unidad)
+ubicarRango(unidad : Unidad)
+ubicarAsedio(unidad : Unidad)
+calcularPuntaje() : Puntaje
}
class Mazo {
+Mazo(cartasUnidad : List<Unidad>, cartasEspeciales : List<Especial>)
+validarCartasSuficientes(cantUnidadMin : int, cantEspecialMin : int)
-validarCartasUnidadSuficientes(cant : int)
-validarCartasEspecialSuficientes(cant : int)
+obtenerCarta() : Carta
}
class Gwent {
+calcularPuntaje(jugador : Jugador): Puntaje
}

abstract class Especial {

}
class Unidad {
+Unidad(colocador : Colocador, puntosIniciales : int, modificador : Modificador)
+calcularPuntaje() : Puntaje
+usar(tablero : Tablero)
}
class Seccion {
+reducirPuntaje(valor : int)
+ubicar(unidad : Unidad)
+puntajeTotal() : Puntaje
}
class Modificador {
+aplicarModificador(puntaje : Puntaje) : Puntaje
}
class TierraArrasada {
+usar(tablero : Tablero)
}
class MoraleBoost {
+usar(tablero : Tablero)
}
class Clima {
+Clima(Seccion seccion1, Seccion seccion2)
+usar(tablero : Tablero)
}

class Puntaje {
-valor : int
+Puntaje(puntosIniciales : int)
+sumarPuntaje(unPuntaje : Puntaje) : Puntaje
+restarPuntaje(unPuntaje : Puntaje) : Puntaje
+obtenerValor() : int
+equals(valor : int) : Boolean
}

class Mano {
+Mano(cartas : List<Carta>)
+tieneCartasSuficientes(cantidadCartas : int)
+tomarCarta(mazo : Mazo)
+agarrarCarta(unaPosicion : int) : Carta
}

class Moneda
class Turno
class PilaDeDescarte {
+descartarUna(carta : Carta)
+descartarCartas(descartes : List<Carta>)
+usarCartaMedico(posicion : int) : Carta
}

interface Colocador {
+colocar(Unidad unidad, Tablero tablero)
}

@enduml

